# QuasiPiler

./: CMakeLists.txt  Doxyfile  readme.md
.github/workflows/: codeql.yml  html.yml  tests.yml
data/: test00.qc  test01.qc  test02.qc  test03.qc  test04.qc  test05.qc  test06.qc  test07.qc  test08.qc  test09.qc  test10.qc  test11.qc  test12.qc
include/: ast.hpp  expression.hpp  grouper.hpp  reader.hpp  token.hpp
src/: ast.cpp  expression.cpp  grouper.cpp  main.cpp  reader.cpp
tests/: arithmetic_tests.cpp  ast_tests.cpp  grouper_tests.cpp  identify_tests.cpp  reader_tests.cpp
